# aac.lab2

./: CMakeLists.txt  README.md  Source.cpp  tests.cpp  звіт.lab2.docx
